[package]
name = "octosheet"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.4"
# serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs" }
serde = { version = "1.0", features = ["derive"] }
