[package]
name = "octosheet"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
description = "Parse MusicXML files"
repository = "https://github.com/mockersf/octosheet"
homepage = "https://github.com/mockersf/octosheet"
documentation = "https://docs.rs/octosheet"
keywords = ["music", "sheet", "musicxml"]
license = "MIT"
readme = "README.md"

[dependencies]
serde-xml-rs = "0.4"
serde = { version = "1.0", features = ["derive"] }
